--- a/WebApplicationDemoContext/appsettings.Development.json
+++ b/WebApplicationDemoContext/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=demo;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;"
   }
 }
