--- a/WebApplicationDemoContext/WebApplicationDemoContext.csproj
+++ b/WebApplicationDemoContext/WebApplicationDemoContext.csproj
@@ -8,20 +8,22 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.12" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
-          <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
         <PackageReference Include="ServiceStack" Version="8.6.0" />
+        <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="8.6.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="API\" />
+      <Folder Include="core\" />
       <Folder Include="dto\" />
-      <Folder Include="IServices\" />
-      <Folder Include="Services\" />
     </ItemGroup>
 
 </Project>
