--- a/WebApplicationDemoContext/WebApplicationDemoContext.csproj
+++ b/WebApplicationDemoContext/WebApplicationDemoContext.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.12" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2">
@@ -22,8 +24,7 @@
 
     <ItemGroup>
       <Folder Include="API\" />
-      <Folder Include="core\" />
-      <Folder Include="dto\" />
+      <Folder Include="Core\" />
     </ItemGroup>
 
 </Project>
