--- a/WebApplicationDemoContext/appsettings.Development.json
+++ b/WebApplicationDemoContext/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1,1433;Database=demo;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Issuer": "your_issuer",
+    "Audience": "your_audience",
+    "SecretKey": "your_secret_key_must_be_at_least_32_chars_long"
   }
 }
