--- a/WebApplicationDemoContext/appsettings.Development.json
+++ b/WebApplicationDemoContext/appsettings.Development.json
@@ -12,6 +12,6 @@
     "Issuer": "your_issuer",
     "Audience": "your_audience",
     "SecretKey": "your_secret_key_must_be_at_least_32_chars_long",
-    "ExpiresIn": 240
+    "Expiration": 240
   }
 }
