--- a/WebApplicationDemoContext/appsettings.Development.json
+++ b/WebApplicationDemoContext/appsettings.Development.json
@@ -11,6 +11,7 @@
   "Jwt": {
     "Issuer": "your_issuer",
     "Audience": "your_audience",
-    "SecretKey": "your_secret_key_must_be_at_least_32_chars_long"
+    "SecretKey": "your_secret_key_must_be_at_least_32_chars_long",
+    "ExpiresIn": 240
   }
 }
